Jaxen-167: Fixing accidental and trivial Java 5 dependence